--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "element-ui": "^2.14.1",
     "vue": "^2.5.11",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
