--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.14.1",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "browserslist": [
